--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    
-    <title>Document</title>
-    
-    <!-- CSS File-->
-    <link rel="stylesheet" href="style.css">
-
-</head>
-
-<body>
-
-    <div class="loader">
-        <div class="loader-item"></div>
-        <div class="loader-item"></div>
-        <div class="loader-item"></div>
-</body>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Loading — анимация загрузки</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
